--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ input[type="checkbox"] {vertical-align: text-bottom;}
 input[type="radio"] {vertical-align: text-bottom;}
 
 /* ---------------------------------------------------- базовые настройки ---------------------------------------------------- */
-html {overflow: auto;}
+html {overflow: scroll;}
 body {line-height: 1;background:#f6f6f6;text-align: left;font: 12px Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;}
 textarea {font-family: Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;}
 label, input[type="button"], input[type="submit"], button {cursor: pointer;}
@@ -32,6 +32,7 @@ div.main_center {margin:0px auto;width:960px;}
 .title_modal_icon {width:14px;height:14px;display:block;background: url(../images/ui-icons_888888_256x240.png) no-repeat;background-position: -32px -192px;float: right;margin: 0px 4px;}
 .window2{padding: 15px;}
 #loading {background: url(../images/elem.gif) no-repeat;width:16px;height:16px;}
+.ui-tabs .ui-tabs-hide {display: none !important;}
 /* ---------------------------------------------------- main css ----------------------------------------------------  */
 
 div.main_ris {background: url(../images/text.png) no-repeat;width:765px;height:76px;margin:0 auto;}
@@ -47,7 +48,8 @@ div.body_down{text-align: center;font-size: 14px;}
 .header_parent {height:73px;margin: 0px;background: -webkit-radial-gradient(black 15%, transparent 16%) 0 0, -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
 background-color: #282828;
 background-size: 14px 14px;}
-.header_child {background: url(../images/logo.png) no-repeat;margin:0px 0px 0px 60px;width:247px;height:102px;float:left;}
+.header_child {background: url(../images/logo.png) ;margin:0px 0px 0px 60px;width:247px;height:102px;float:left;}
+.header_logo {background: url(../images/logo2.png) no-repeat;width:200px;height:69px;margin:10px auto;}
 .header_ico{float: right;margin: 25px;}
 .ico {display: block;float: left;width:24px;height:24px;background: url(../images/ico.png);margin-right:10px;}
 .home:hover {background-position: -24px 0;}
@@ -86,7 +88,7 @@ th {padding:2px 0px;}
  
   /* ---------------------------------------------------- edit css  ---------------------------------------------------- */
 .edit_td {background: #eee;float:left;padding: 5px;margin: 2px 2px 0px 0px;border:1px solid #333;}
-.edit_view {width: 700px;float:right;padding:20px;border:1px solid #999;margin:20px 0px;}
+.edit_view {width: 700px;float:right;padding:11px 20px 20px;}
 .edit_legend{font-size: 14px;font-weight:bold;background: #333;color: #aaa;margin:10px 0px;padding:2px;}
 .edit_podlegend{background: #aaa;color: #333;margin:10px 0px;}
 .edit_menu {position: relative;width: 150px;float: right;padding: 15px;border: 1px solid #999;margin: 20px 0px 0px 5px;}
@@ -153,3 +155,4 @@ a.bd_off:hover , a.bd_on:hover {text-decoration: underline!important;color: red;
 .Status_getdata {float:left;}
 .online_scan {display:none;}
 .scan_b {width: 250px;margin: 0px auto;}
+
