--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,28 @@
-/* ---------------------------------------------------- reset.css ---------------------------------------------------- */
-html, body, div, span, h1, h2, h3, h4, h5, h6, p, em, img, strong, sub, sup, b, u, i,  dl, dt, dd, ol, ul, li, fieldset, form, label {margin: 0;padding: 0;border: 0;outline: 0;vertical-align: baseline;background: transparent;font-size: 100%;}
-a {margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;}
-table {border-collapse: collapse;border-spacing: 0;outline: 0;vertical-align: baseline;background: transparent;font-size: 100%;}
-td, td img {vertical-align: top;} 
-input, select, button, textarea {margin: 0;font-size: 100%;}
-input[type="text"], input[type="password"], textarea {padding: 0;}
-input[type="checkbox"] {vertical-align: text-bottom;}
-input[type="radio"] {vertical-align: text-bottom;}
-
-/* ---------------------------------------------------- базовые настройки ---------------------------------------------------- */
-html {overflow: scroll;}
-body {line-height: 1;background:#f6f6f6;text-align: left;font: 12px Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;}
-textarea {font-family: Arial, "Helvetica CY", "Nimbus Sans L", sans-serif;}
-label, input[type="button"], input[type="submit"], button {cursor: pointer;}
-a, a:visited {color: #36C;text-decoration: underline;}
-a:hover {color: #CC0000;text-decoration: none;}
-a:focus, a:active {color: #36C!important;text-decoration: underline;}
-h1, h2, h3, h4, h5, h6 {text-align:center;color: #444;margin:10px 0px;}
- 
-/* ---------------------------------------------------- глобальные настройки ---------------------------------------------------- */
-.clear{clear:left;text-align:left;}
-.inputSubmit{text-align:center;cursor: pointer;background-color:#444;color:#fff;}
-.inputSubmit:hover {color:#aaa;}
-div.main_center {margin:0px auto;width:960px;}
-.message{margin:0px auto;font-weight:bold;text-align: right;position: relative;clear: both;width: 960px;color:green;}
-.message_error{margin:0px auto;font-weight:bold;text-align: right;position: relative;clear: both;width: 960px;color:red;}
-.modal, .window { border: solid 1px #ccc; position: absolute;display: none;background: #eee;padding: 15px;margin: 15px;-webkit-box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.25);-moz-box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.25);box-shadow: 3px 4px 3px rgba(0, 0, 0, 0.25)}
-.window {position: fixed;}
-.title_modal {height: 16px;background: #222;margin: 2px;}
-.title_text {float: left;color: #AAA;padding: 1px 4px;}
-.title_modal_icon {width:14px;height:14px;display:block;background: url(../images/ui-icons_888888_256x240.png) no-repeat;background-position: -32px -192px;float: right;margin: 0px 4px;}
-.window2{padding: 15px;}
-#loading {background: url(../images/elem.gif) no-repeat;width:16px;height:16px;}
-.ui-tabs .ui-tabs-hide {display: none !important;}
 /* ---------------------------------------------------- main css ----------------------------------------------------  */
-
-div.main_ris {background: url(../images/text.png) no-repeat;width:765px;height:76px;margin:0 auto;}
+body {background: url(../images/1.png)}
+div.main_ris {background: url(../images/text.png) no-repeat;width:765px;height:76px;margin:40px auto;}
 div.body_down{text-align: center;font-size: 14px;}
 .copyright{text-align:center;}
+
 /* ---------------------------------------------------- header css ----------------------------------------------------  */
-.header_dialog-overlay {width:100%;height:100%;filter:alpha(opacity=50);-moz-opacity:0.5;-khtml-opacity: 0.5;opacity: 0.5;background:#000;position:absolute;top:0;left:0;z-index:3000;display:none;}
-.header_dialog-box {-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-border-radius: 5px;
--webkit-border-radius: 5px;background:#eee;width: 300px;position:absolute;z-index:5000;display:none;}
- .header_dialog-box .header_dialog-content {text-align:left;padding:5px;margin:13px;color:#666;font-family:verdana;font-size:11px;}
-.main_header{margin:0px auto;width:960px;height: 102px;}
+
+.user-name {
+    font-size: 14px;font-width:bold;padding-right:7px;
+}
 .header_view{padding: 0px;margin: 0px auto;width: 100%;text-align: left;}
-.header_parent {height:73px;margin: 0px;background: -webkit-radial-gradient(black 15%, transparent 16%) 0 0, -webkit-radial-gradient(black 15%, transparent 16%) 8px 8px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px, -webkit-radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
-background-color: #282828;
-background-size: 14px 14px;}
+.header_parent {
+	height:73px;	
+	margin-bottom:25px;
+	webkit-border-radius: 0 0 12px 12px;
+	moz-border-radius: 0 0 12px 12px;
+	border-radius: 0 0 12px 12px;
+	}	
 .header_child {background: url(../images/logo.png) ;margin:0px 0px 0px 60px;width:247px;height:102px;float:left;}
 .header_logo {background: url(../images/logo2.png) no-repeat;width:200px;height:69px;margin:10px auto;}
-.header_ico{float: right;margin: 25px;}
-.ico {display: block;float: left;width:24px;height:24px;background: url(../images/ico.png);margin-right:10px;}
+.header_ico{float: right;margin: 10px;}
+.ico {display: inline-block;
+    margin-right: 3px;
+	width:24px;height:24px;background: url(../images/ico.png);}
 .home:hover {background-position: -24px 0;}
 .loginOFF { background-position: -48px 0;}
 .loginOFF:hover { background-position: -72px 0;}
@@ -64,7 +35,6 @@ a.header_button {background-position: -96px 0;position:absolute;top: 10px;right:
 .header_user{vertical-align: middle;vertical-align: middle;color: #AAA;font-weight: bold;}
 
  /* ---------------------------------------------------- menu css  ---------------------------------------------------- */
-
 .menu_center {width: 850px;margin: 0px auto;}
 .menu_fieldset {border: 1px solid #aaa;margin:15px 0px;padding:15px;}
 .menu1 {width: 350px;float: left;}
@@ -77,11 +47,22 @@ a.header_button {background-position: -96px 0;position:absolute;top: 10px;right:
 .menu_admin1 input{width:150px;}
 .menu_admin1 input.inputSubmit{width:154px;}
 .menu_admin2{width:150px;float:right;}
-#comp_create input {width: 129px;}
+#comp_create input {width: 200px;border: 1px solid #AAA;padding: 0px;}
 .but_create{width: 133px;margin:2px 0px;}
 .but_reboot{width: 154px;margin:2px 0px;}
 .menu_fieldset select#list_comp, .menu_fieldset select#list_otdel, .menu_fieldset .but_delete{margin:2px 0px;width: 318px;}
 p.menu_online {margin-top: 15px;}
+
+
+/* ----------------------------------------------------otdel edit css ----------------------------------------------------  */
+.ico_otdel {background: url(../images/list.png);width:16px;height:16px;float: left;cursor: pointer;}
+#edit_otdel {-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-border-radius: 5px;-webkit-border-radius: 5px;border: 1px solid #aaa;width: 225;background: #ddd;position: absolute;padding:15px;display:none;}
+#edit_otdel h2 {margin: 0px !important;}
+.otdel_select, .otdel_input {float: left;margin: 0px 7px 0px 0px;}
+.otdel_select select {width:200px !important; margin:0px !important;}
+.otdel_input {border: 1px solid #AAA;padding: 0px;width:200px;}
+.ico_create_otdel {background: url(../images/plus.png);width:16px;height:16px;float: left;cursor: pointer;}
+.ico_delete_otdel {background: url(../images/trash.png);width:16px;height:16px;float: left;cursor: pointer;clear: left;margin-top: 10px;}
 
 /* ---------------------------------------------------- table view css ----------------------------------------------------  */
 th {padding:2px 0px;}
@@ -100,11 +81,13 @@ th {padding:2px 0px;}
 .edit_row_view {float: left;width: 680px;height:16px;margin:0px 0px 2px 20px;}
 ._edit_even {background:#ddd;}
 .edit_row_name{width:180px;float: left;}
-.edit_row_value{width: 480px;float: left;}
-.edit_row_input{width: 480px;float: left;border: 1px solid #AAA;padding: 0px;margin: 0px;}
+.edit_row_value{width: 462px;float: left;}
+.edit_row_input{width: 462px;float: left;border: 1px solid #AAA;padding: 0px;margin: 0px;}
 .edit_row_input:focus{color: red;border: 1px solid #000;outline:none;background-color:#fff;}
 .edit_row_view .edit_tag {float: right;width:16px;height:16px;background:url(../images/tag.png);cursor: pointer;}
-
+.edit_row_view .show_tag_on {float: right;width:16px;height:16px;background:url(../images/exclamation.png);cursor: pointer;margin-left: 3px;}
+.edit_row_view .show_tag_off {float: right;width:16px;height:16px;background:url(../images/caution.png);cursor: pointer;margin-left: 3px;}
+.e_b {padding-top: 20px;}
 /* ---------------------------------------------------- workPlace css  ---------------------------------------------------- */
 .wk_selection {color:#000;}
 .wk_head_text {width: 150px;float:left;margin:15px 0px  0px;}
@@ -128,8 +111,17 @@ th {padding:2px 0px;}
 .register_button{width:133px;}
 .reg_inp {width:133px;}
 
+/* ---------------------------------------------------- login_form css ----------------------------------------------------  */
+.logon_buttton {margin-top: 10px;width: 133px;}
+
 /* ---------------------------------------------------- panel_admin  css ----------------------------------------------------  */
-.panel_admin_left {width:400px;margin:15px auto;border: 2px solid #999;padding:15px}
+.panel_admin {display:none;background:#ddd;-webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);-moz-border-radius: 5px;-webkit-border-radius: 5px;border: 1px solid #aaa;width:300px;position:absolute;}
+.panel_admin_ico, .subpanel_admin_ico{width:14px;height:14px;display:block;background: url(../images/ui-icons_888888_256x240.png) no-repeat;background-position: -32px -192px;float: right;margin: 0px 10px;}
+.panel_admin_ui {list-style-type:none;}
+.panel_admin_ui li {margin: 5px;}
+.panel_invait, .panel_pass {display:none;}
+#form_key_access {float: left;}
+.panel_admin_left {display:none;}
 .user_group {float:left;}
 
 /* ----------------------------------------------------Service css------Process  css  Share----------------------------------------------------  */
@@ -156,3 +148,11 @@ a.bd_off:hover , a.bd_on:hover {text-decoration: underline!important;color: red;
 .online_scan {display:none;}
 .scan_b {width: 250px;margin: 0px auto;}
 
+dl.DdFloatClear dd {float:none !important;}
+dl.DdFloatClear dd a.active {background: #D8582B;color: white;font-weight: bold;}
+dl.DdFloatClear {height: auto !important;}
+.headerTitle {color: #D8582B;}
+
+#bar .ui-progressbar-value{
+	background-image:url(../images/pbar-ani.gif);	
+}
